source_set("solutions_sources") {
  include_dirs = [ "//" ]

  sources = [
    "add_two_numbers.cpp",
    "add_two_numbers.h",
    "contains_duplicate.cpp",
    "contains_duplicate.h",
    "convert_to_title.cpp",
    "convert_to_title.h",
    "delete_duplicates.cpp",
    "delete_duplicates.h",
    "delete_duplicates2.cpp",
    "delete_duplicates2.h",
    "delete_middle.cpp",
    "delete_middle.h",
    "delete_node.cpp",
    "delete_node.h",
    "delete_node2.cpp",
    "delete_node2.h",
    "detect_capital_use.cpp",
    "detect_capital_use.h",
    "detect_cycle.cpp",
    "detect_cycle.h",
    "generate.cpp",
    "generate.h",
    "get_decimal_value.cpp",
    "get_decimal_value.h",
    "get_intersection_node.cpp",
    "get_intersection_node.h",
    "get_kth_from_end.cpp",
    "get_kth_from_end.h",
    "has_cycle.cpp",
    "has_cycle.h",
    "in_order_traversal.cpp",
    "in_order_traversal.h",
    "is_palindrome.cpp",
    "is_palindrome.h",
    "is_palindrome2.cc",
    "is_palindrome2.h",
    "is_subsequence.cc",
    "is_subsequence.h",
    "kth_to_last.cpp",
    "kth_to_last.h",
    "length_of_last_word.cpp",
    "length_of_last_word.h",
    "length_of_longest_substring.cpp",
    "length_of_longest_substring.h",
    "list_node.cpp",
    "list_node.h",
    "longest_common_prefix.cpp",
    "longest_common_prefix.h",
    "longest_palindrome.cc",
    "longest_palindrome.h",
    "majority_element.cc",
    "majority_element.h",
    "matrix_reshape.cpp",
    "matrix_reshape.h",
    "max_area.cpp",
    "max_area.h",
    "max_profit.cpp",
    "max_profit.h",
    "max_sub_array.cpp",
    "max_sub_array.h",
    "merge.cpp",
    "merge.h",
    "merge_k_sorted_lists.cpp",
    "merge_k_sorted_lists.h",
    "merge_two_lists.cpp",
    "merge_two_lists.h",
    "middle_node.cpp",
    "middle_node.h",
    "multi_thread_1114.cc",
    "multi_thread_1114.h",
    "odd_even_list.cpp",
    "odd_even_list.h",
    "post_order_traversal.cpp",
    "post_order_traversal.h",
    "pre_order_traversal.cpp",
    "pre_order_traversal.h",
    "remove_duplicate_nodes.cpp",
    "remove_duplicate_nodes.h",
    "remove_duplicates.cc",
    "remove_duplicates.h",
    "remove_elements.cpp",
    "remove_elements.h",
    "remove_nth_from_end.cpp",
    "remove_nth_from_end.h",
    "reverse.cpp",
    "reverse.h",
    "reverse_list.cpp",
    "reverse_list.h",
    "reverse_print.cpp",
    "reverse_print.h",
    "reverse_string.cpp",
    "reverse_string.h",
    "split_list_to_parts.cpp",
    "split_list_to_parts.h",
    "str_str.cpp",
    "str_str.h",
    "swap_pairs.cpp",
    "swap_pairs.h",
    "title_to_number.cpp",
    "title_to_number.h",
    "tree_node.cpp",
    "tree_node.h",
    "two_sum.cpp",
    "two_sum.h",
  ]
}
